@@ -42,6 +42,6 @@
 
 // void new_instance(CPlugin * instance, nsPluginCreateData * parameters);
 void new_instance(CPlugin * instance, int16_t argc, char *argn[], char *argv[]);
-gint streaming(gchar * url);
+gboolean streaming(gchar * url);
 
 #endif                          // _PLUGIN_SETUP_H
